# custom-go2-control

./: .gitignore  ARCHITECTURE.md  README.md  setup_env.bash
src/go2_autonomy/: README.md
src/go2_autonomy/go2_autonomy/: CMakeLists.txt  README.md  package.xml
src/go2_autonomy/go2_localisation/: CMakeLists.txt  README.md  package.xml
src/go2_autonomy/go2_localisation/launch/: localization.launch.py
src/go2_autonomy/go2_localisation/src/: map_odom_tf_node.cpp  odom_path_history_node.cpp
src/go2_autonomy/go2_navigation/: README.md
src/go2_autonomy/go2_perception/: README.md
src/go2_autonomy/go2_slam/: README.md
src/go2_basestation/: README.md
src/go2_bridge/: CMakeLists.txt  README.md  camera_calibration.yaml  package.xml
src/go2_bridge/src/: go2_bridge_node.cpp
src/go2_bringup/: README.md  package.xml  setup.py
src/go2_bringup/config/: control_params.yaml  cyclonedds.xml  foxglove_all_topics.yaml  foxglove_phase1.yaml  motion_params.yaml
src/go2_bringup/launch/: base_station.launch.py  bridge.launch.py  foxglove_bridge.launch.py  phase1.launch.py  robot.launch.py  sensors.launch.py  teleop.launch.py
src/go2_control/: README.md
src/go2_control/go2_arbitration/: README.md
src/go2_control/go2_arbitration/config/: control_params.yaml
src/go2_control/go2_motion/: CMakeLists.txt  README.md  package.xml
src/go2_control/go2_motion/src/: cmd_vel_to_sport_node.cpp
src/go2_control/go2_onboard_control/: CMakeLists.txt  README.md  package.xml
src/go2_control/go2_teleop/: README.md  package.xml  setup.cfg  setup.py
src/go2_control/go2_teleop/config/: teleop_keyboard.yaml
src/go2_control/go2_teleop/go2_teleop/: joy_teleop_node.py  keyboard_teleop_node.py
src/go2_control/go2_teleop/launch/: keyboard_twist_teleop.launch.py
src/go2_description/: CMakeLists.txt  README.md  package.xml
src/go2_description/config/: joint_names.yaml
src/go2_description/launch/: description.launch.py
src/go2_description/urdf/: README.txt  go2.urdf.xacro
src/go2_hardware/: README.md
src/go2_hardware/go2_camera/: CMakeLists.txt  README.md  package.xml
src/go2_hardware/go2_camera/launch/: camera.launch.py
src/go2_hardware/go2_camera/src/: camera_node.cpp
src/go2_hardware/go2_lidar/: README.md
src/go2_hardware/go2_sensors/: CMakeLists.txt  README.md  package.xml
src/go2_hardware/go2_sensors/config/: sensor_params.yaml
src/go2_interfaces/: CMakeLists.txt  README.md  package.xml
src/go2_interfaces/action/: ExecuteMotion.action
src/go2_interfaces/msg/: ControlState.msg  FaultStatus.msg  FootForce.msg  MotionCapability.msg  MotionState.msg  RobotState.msg
src/go2_interfaces/srv/: GetCapabilities.srv  SetControlMode.srv  SetGait.srv  SetPosture.srv  SetSpeedLevel.srv  SportApiCall.srv  TriggerMotion.srv
src/go2_rviz/: CMakeLists.txt  README.md  package.xml
src/go2_rviz/rviz/: go2_default.rviz  go2_nav.rviz
src/go2_sim/: README.md
src/go2_state/: CMakeLists.txt  README.md  package.xml
