<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_bringup</name>
  <version>0.1.0</version>
  <description>Launch files, parameter configs, and DDS configuration for the Unitree Go2</description>
  <maintainer email="hunter@todo.todo">hunter</maintainer>
  <license>MIT</license>

  <depend>go2_vendor_bridge</depend>
  <depend>go2_motion</depend>
  <depend>go2_control</depend>
  <depend>go2_state</depend>
  <depend>go2_sensors</depend>
  <depend>go2_description</depend>
  <depend>go2_teleop</depend>
  <depend>go2_rviz</depend>
  <depend>launch_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
