<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_bringup</name>
  <version>0.1.0</version>
  <description>Launch files, parameter configs, and DDS configuration for the Unitree Go2</description>
  <maintainer email="hunter@todo.todo">hunter</maintainer>
  <license>MIT</license>

  <exec_depend>go2_bridge</exec_depend>
  <exec_depend>go2_localisation</exec_depend>
  <exec_depend>go2_camera</exec_depend>
  <exec_depend>go2_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
