<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_autonomy</name>
  <version>0.1.0</version>
  <description>Custom SLAM, localization, mapping, and navigation for the Unitree Go2</description>
  <maintainer email="hunter@todo.todo">hunter</maintainer>
  <license>MIT</license>

  <depend>rclcpp</depend>
  <depend>go2_interfaces</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
