<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_teleop</name>
  <version>0.1.0</version>
  <description>Teleoperation interfaces for the Unitree Go2</description>
  <maintainer email="hunter@todo.todo">hunter</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>go2_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
